Continuação trabalho D/web

--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,7 @@
                     <img src="img/logotipo.png" alt="Logotipo MG Multimarcas">
                 </div>
                 <div class="contato">
-                    <a href="#">Ligue: (44)99999999</a>
+                    <a href="#">Ligue: (44)997126200</a>
                 </div>
             </div>
         </section>
@@ -24,17 +24,100 @@
             <ul>
                 <!-- li*5>a -->
                <li><a href="index.html">Home</a></li>
-               <li><a href="sobre.html">Sobre</a></li>
-               <li><a href="seminovos.html">Seminovos</a></li>
-               <li><a href="novos.html">Novos</a></li>
-               <li><a href="contato.html">Contato</a></li>
+               <li><a href="sobre.html" target="_blank">Sobre</a></li>
+               <li id="link-desabilitado">Produtos</li>
+               <li><a href="#footer">Contato</a></li>
             </ul>
         </nav>
     </header>
     <div id="main">
         <section>
-        a empresa x y z lalala 123 a empresa x y z lalala 123 a empresa x y z lalala 123 a empresa x y z lalala 123 a empresa x y z lalala 123 a empresa x y z lalala 123 a empresa x y z lalala 123 a empresa x y z lalala 123 a empresa x y z lalala 123 
+            <h1 id="titulo-sobre">Sobre Nós</h1>
+            <div class="item-sobre">
+                Conveniência Carreiro
+                Tião Carreiro sempre foi apaixonado por empreendedorismo e sonhava em ter seu próprio
+                negócio, então decidiu investir em um mercado que vendesse alimentos básicos e alguns
+                produtos diferenciados, como o chicote.
+                Tião Carreiro era muito trabalhador e dedicado ao seu negócio. Ele comprava produtos de
+                qualidade e oferecia um excelente atendimento aos seus clientes. As pessoas da cidade
+                começaram a notar a diferença em relação a outros mercados da região e logo o mercado de
+                Tião Carreiro se tornou muito popular.
+                Entre os produtos vendidos no mercado estavam o arroz, feijão, açúcar, canela e, claro, o
+                chicote. O chicote era uma curiosidade que muitos clientes se interessavam em comprar, seja
+                por curiosidade ou por alguma necessidade específica.
+
+            </div>
     </section>
     </div>
+    <footer id="footer">
+        <section>
+        <div class="item contato">
+            <h3>Dados de contato</h3>
+            <p>
+                (44)997126200
+                rebaixados-itajai@gmail.com
+                Rod. Antônio Heil, 800 
+                Itajaí - SC
+
+            </p>
+            <p>
+                Desenvolvido por <b>Matheus Crivelli RA-11242 | João Gabriel </b>
+            </p>
+        </div>
+        <div class="item">
+            <h3>
+             Fale com a gente
+            </h3>
+              <form
+               class="contato">
+
+                 
+                 <input type="text" name="nome" placeholder="Insira seu nome">
+
+                 <input type="mail" name="email" placeholder="Seu e-mail">
+
+                 <textarea name="mensagem" placeholder="Sua mensagem"></textarea>
+                 
+
+                 <button>enviar</button>
+             </form>
+
+          </div>
+       <div class="item">
+          <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+               <li><a href="sobre.html" target="_blank">Sobre</a></li>
+               <li><a href="#produtos">Produtos</a></li>
+               <li><a href="#footer">Contato</a></li>
+
+          </ul>
+
+            <h3>Nos siga nas redes sociais</h3>
+            <ul class="social">
+                <li>
+                    <a href="https://www.facebook.com/MateusCrivelli" target="_blank">
+                          <i class="fa-brands fa-square-facebook"></i> 
+                              </a>
+                                   </li>
+                <li>
+                   <a href="https://www.instagram.com/matheus_crivelli/" target="_blank">
+                      <i class="fa-brands fa-square-instagram"></i>
+                         </a>
+                              </li>                     
+                <li>
+                    <a href="https://wa.me/5544997126200" target="_blank">
+                        <i class="fa-brands fa-square-whatsapp"></i>
+                             </a>
+                                 </li>
+              </ul>
+          </div>
+        <div class="item">
+  
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1495.4717582290994!2d-48.707677953686456!3d-26.93992786566777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8cb5b44d3d63d%3A0x1f00c4ecec46f8c2!2sCantuPneus!5e0!3m2!1spt-BR!2sbr!4v1680901563996!5m2!1spt-BR!2sbr" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        </section>
+        <script src="https://kit.fontawesome.com/b82f5ae24a.js" crossorigin="anonymous"></script>
+
+    </footer>
 </body>
 </html>
